style/media.css
@media screen and (max-width: 850px) {
    #article-arrow, #menu-arrow {
        font-size: 30px;
    }
}

@media screen and (max-width: 750px) {
    #adjLogo {
        width: 80%;
        left: 10%;
        top: 25%;
    }
}

@media screen and (min-width: 551px) {
    #menu-buttons {
        display: flex;
    }
}

@media screen and (max-width: 800px) {
    .author {
        font-size: 25px;
    }
    .entry-title {
        font-size: 45px;
        line-height: 50px;
    }

    .nav-arrow {
        font-size: 25px;
    }
}

@media screen and (max-width: 1200px) {
    .author.interactive-t {
        font-size: 20px;
    }
    .entry-title.interactive-t {
        font-size: 30px;
        line-height: 35px;
    }
    .entry-content.interactive-t {
        margin: 100px 0 0;
    }
}

@media screen and (max-width: 1350px) {
    .interactive > .article__nav > nav > .nav-links > .nav-previous > a > .nav-arrow > .arrow-text {
        display: none;
    }

    .interactive > .article__nav > nav > .nav-links > .nav-next > a > .nav-arrow > .arrow-text {
        display: none;
    }
}

/* MOBILE */

@media screen and (max-width: 600px) {
    #adjLogo {
        display: none;
    }

    #menu-buttons {
        display: none !important;
    }

    .mobile-menu {
        display: flex;
    }

    .pic-wrapper {
        width: 100vw;
    }

    .article-list {
        height: 100vh;
        width: 100vw;
        padding-top: 75px;
        background-color: #8080804f;
    }

    .title-text-menu {
        font-size: 32px;
        line-height: 30px;
    }

    .author-text-menu {
        font-size: 16px;
        line-height: 16px;
    }

    .pic-wrapper {
        width: 100vw !important;
        z-index: 0 !important;
    }
    .pic-child {
        width: 25%;
    }

    .header {
        display: none !important;
    }

    /* Article view */
    .article-mobile-menu {
        display: flex;
    }

    .article__nav {
        top: 75px;
        border-left: none;
        border-right: none;
        height: 50px;
    }

    .arrow-text {
        display: none;
    }

    .arrow-right, .arrow-left {
        height: 20px;
    }

    .column {
        width: 100%;
        border-right: none;
        height: auto !important;
    }

    article {
        display: block;
    }

    .entry-meta {
        text-align: center;
    }

    .author {
        font-size: 16px;
        font-family: 'RobotoBold';
    }

    .entry-title {
        font-size: 32px;
        line-height: 32px;
        text-align: center;
    }

    .entry-header {
        margin-bottom: 4em;
    }

    .content {
        margin-top: calc(95px + 40px);
        padding: 20px;
    }

    .artwork {
        position: relative !important;
        top: 0 !important;
        z-index: 0 !important;
        height: auto !important;
        width: 100% !important;
    }

    #top-pic, #bot-pic {
        position: relative !important;
        opacity: 1 !important;
        top: none !important;
        left: none !important;
        width: 100%;
    }

    .article-nav-mobile {
        display: block;
    }

    .illustrator__tagline {
        font-size: 16px;
        font-family: 'RobotoRegular';
    }

    .interactive {
        width: 100% !important;
    }

    .interactive-tong-content, .interactiveTong2 {
        position: relative;
        top: 0;
        width: 100%;
        border-right: none;
        z-index: 0;
    }

    iframe {
        height: 100%;
        width: 100%;
        min-height: 500px !important;
        position: relative !important;
    }

    hr {
        background-color: #d2030f;
        border: 0;
        height: 4px;
        margin-bottom: 2rem;
    }

    /* Article menu */
    .menu-wrapper .hamburger-list {
        overflow-y: auto !important;
    }

    .hamburger-list .hamburger-item {
        font-size: 32px !important;
    }

    .prev-issues li {
        border: none;
        border-bottom: 2px solid #d2030f;
        background-color: #dfdfdf;
    }
    .menu-wrapper .hamburger-list {
        width: 100%;
        border-right: 4px solid #D2030F;
    }

    #anchor {
        background-image: none !important;
        display: block;
    }

    .anchor-pic {
        display: block !important;
    }
    .entry-header {
        margin-bottom: 63px !important;

    }

    .illustrations {
        margin-bottom: 63px !important;

    }

    .entry-content {
        margin-top: 0px !important;
    }

    .artwork > img {
        width: 100%;
        height: auto;
    }

    .hamburger-article {
        top: 75px !important;
        height: calc(100% - 75px - 45px) !important
    }

    .hamburger-close {
        background: url(../assets/x_mobile.svg);
        height: 100%;
        background-size: contain;
        background-repeat: no-repeat;
        position: absolute;
        top: 0;
        width: 100px;
        right: 0;
        background-position: center;
        width: 10vw;
        height: 50%;
        top: calc(50% - 5vw - 10px);
        margin: 10px;
    }

    .menu-wrapper .hamburger-list {
        top: 75px;
        height: calc(100% - 75px - 45px);
    }

    .article-list {
        opacity: 1;
        transition: 0s;
        transform: translateX(0%);
        visibility: visible;
        background-color: #00ffff00;
    }

    .article-list > .article-item:first-child {
        padding-top: 50vh !important;
    }

    @keyframes bounce {
        0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
        40% {transform: translateY(-30px);} 
        60% {transform: translateY(-15px);} 
    }

    .article-list.bump {
        animation: bounce 2s infinite;
    }

    .article-list.hidden {
        display: none;
    }

    .page {
        margin-bottom: 0px;
    }

    .gallery {
        display: block;
    }

    img {
        max-width: 100% !important;
        height: auto;
    }
}

